Создание блоговой страницы

--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,8 @@
+:root {
+  --main-white-color: #F7F2FF; /*основной "белый" цвет, используется почти во всех текстах*/
+  --article-text-color: #6E5E83; /* цвет для абзацев статей, описаний услуг и мелких подзаголовков*/
+}
+
 body {
   position: relative;
   height: 100%;
@@ -88,7 +93,8 @@ body {
   font-weight: 500;
   line-height: 48px;
   text-align: center;
-  color: #f7f2ff;
+  color: var(--main-white-color);
+  /*color: #f7f2ff;*/
 }
 /*-----------------------------------------------header----------------------------------------*/
 
@@ -123,7 +129,8 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  color: #f7f2ff;
+  color: var(--main-white-color);
+  /*color: #f7f2ff;*/
   align-items: center;
 }
 .header__logo {
@@ -148,7 +155,8 @@ body {
   font-size: 16px;
   line-height: 19px;
   text-align: right;
-  color: #f7f2ff;
+  color: var(--main-white-color);
+  /*color: #f7f2ff;*/
   padding-right: 20px;
 }
 .header__contact {
@@ -165,7 +173,8 @@ body {
   font-size: 16px;
   line-height: 19px;
   text-align: right;
-  color: #f7f2ff;
+  color: var(--main-white-color);
+  /*color: #f7f2ff;*/
 }
 .header_contact_href {
   font-family: "Inter";
@@ -175,7 +184,8 @@ body {
   line-height: 16px;
   text-align: right;
   text-decoration-line: underline;
-  color: #6e5e83;
+  color: var(--article-text-color);
+  /*color: #6e5e83;*/
 }
 .header__element {
   display: flex;
@@ -224,7 +234,8 @@ body {
   font-size: 45px;
   line-height: 135%;
   text-transform: uppercase;
-  color: #f7f2ff;
+  color: var(--main-white-color);
+  /*color: #f7f2ff;*/
   /* max-width: 580px; */
   /* border: 1px solid black; */
 }
@@ -244,7 +255,8 @@ body {
   line-height: 24px;
   /* identical to box height */
   /* border: 1px solid black; */
-  color: #f7f2ff;
+  color: var(--main-white-color);
+  /*color: #f7f2ff;*/
 }
 .main-button {
   margin-bottom: 197px;
@@ -259,7 +271,8 @@ body {
 
   text-align: center;
 
-  color: #f7f2ff;
+  color: var(--main-white-color);
+  /*color: #f7f2ff;*/
 
   border: 1px solid #f7f2ff;
   border-radius: 5px;
@@ -328,7 +341,8 @@ body {
 
   text-transform: uppercase;
 
-  color: #f7f2ff;
+  color: var(--main-white-color);
+  /*color: #f7f2ff;*/
   /* border: 1px solid black; */
   padding-top: 90px;
   padding-bottom: 30px;
@@ -342,7 +356,8 @@ body {
   font-size: 14px;
   line-height: 21px;
 
-  color: #6e5e83;
+  color: var(--article-text-color);
+  /*color: #6e5e83;*/
   display: flex;
   justify-content: center;
   /* border: 1px solid black; */
@@ -537,7 +552,8 @@ body {
   font-size: 16px;
   line-height: 22px;
   line-height: 135%;
-  color: #f7f2ff;
+  color: var(--main-white-color);
+  /*color: #f7f2ff;*/
 }
 .choice-block__list {
   /* border: 1px solid black; */
@@ -569,7 +585,8 @@ body {
 
   text-align: center;
 
-  color: #f7f2ff;
+  color: var(--main-white-color);
+  /*color: #f7f2ff;*/
 }
 .choice-block__img {
 }
@@ -640,7 +657,8 @@ body {
   line-height: 135%;
   /* or 22px */
 
-  color: #f7f2ff;
+  color: var(--main-white-color);
+  /*color: #f7f2ff;*/
 }
 .reviews-slide__text2 {
   font-family: "Inter";
@@ -662,7 +680,8 @@ body {
   line-height: 135%;
   /* identical to box height, or 19px */
 
-  color: #6e5e83;
+  color: var(--article-text-color);
+  /*color: #6e5e83;*/
   margin-left: 51px;
 }
 
@@ -699,7 +718,8 @@ body {
 
   text-align: center;
 
-  color: #f7f2ff;
+  color: var(--main-white-color);
+  /*color: #f7f2ff;*/
   max-width: 446px;
   margin-bottom: 44px;
 }
@@ -718,7 +738,8 @@ body {
 
   text-align: center;
 
-  color: #f7f2ff;
+  color: var(--main-white-color);
+  /*color: #f7f2ff;*/
   padding: 11px 50px;
   border: 1px solid #f7f2ff;
   border-radius: 5px;
@@ -794,7 +815,8 @@ body {
 
   text-align: center;
 
-  color: #f7f2ff;
+  color: var(--main-white-color);
+  /*color: #f7f2ff;*/
   /* padding: 12px 62px; */
 }
 /*------------------------------------------------------------------------------------------------*/
@@ -839,7 +861,8 @@ body {
   font-size: 18px;
   line-height: 21px;
   /* identical to box height, or 117% */
-  color: #f7f2ff;
+  color: var(--main-white-color);
+  /*color: #f7f2ff;*/
   padding: 20px 0 20px 23px;
 }
 .question__img {
@@ -848,6 +871,167 @@ body {
   padding-top: 23px;
   padding-right: 39px;
 }
+/*---------------------------------------------------------------------------------------------------*/
+/*----------------------------------------------------page-header------------------------------------*/
+.page-header{
+  color: var(--main-white-color);
+  font-family: 'Inter';
+  margin-bottom: 48px;
+}
+
+.page-header__breadcrumbs{
+  margin: 25px 0px;
+  font-size:14px;
+  font-weight:400;
+}
+
+.page-header__title {
+  font-size: 40px;
+  font-weight: 500;
+}
+
+
+/*---------------------------------------------------------------------------------------------------*/
+/*----------------------------------------------------category-list----------------------------------*/
+.services-block__grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+}
+
+.category-list_service-selection{
+  margin: 70px 0px
+}
+
+.category-list_description{
+  font-weight: 400;
+  font-size: 16px;
+  color: var(--article-text-color);
+  margin-bottom: 170px;
+}
+
+/*---------------------------------------------------------------------------------------------------*/
+/*----------------------------------------------------article-page-----------------------------------*/
+.service-article_img{
+  width:100%;
+  height: 324px;
+  object-fit: cover;
+  border-radius: 5px;
+  margin-bottom: 48px;
+}
+
+.service-article_text {
+  color: var(--article-text-color);
+  font-weight:400;
+  font-size: 16px;
+}
+
+.service-article_text h2,
+.service-article_text h3,
+.service-article_text h4,
+.service-article_text h5
+{
+  color: var(--main-white-color);
+  font-weight: 400;
+}
+
+.service-article_text h2{
+  font-size: 30px;
+  margin-bottom: 15px;
+}
+
+.service-article_text h3 {
+  font-size: 22px;
+  margin-bottom: 10px;
+}
+
+.service-article_text h4 {
+  margin-bottom: 10px;
+}
+
+.service-article_text p{
+  margin-bottom:40px;
+}
+
+/*---------------------------------------------------------------------------------------------------*/
+/*----------------------------------------------------page-blog--------------------------------------*/
+.page__blog__grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+}
+
+.page__blog__grid .articles__item{
+  width: 100%
+}
+
+.more-articles-button{
+  display: flex;
+  justify-content: center;
+  margin-top: 48px;
+  margin-bottom: 70px;
+}
+
+.more-articles-button_href {
+  text-align: center;
+  display:block;
+  max-width: 150px;
+  font-weight: 400;
+  font-size: 16px;
+  padding: 10px;
+  color: var(--main-white-color);
+  border: 1px solid #F7F2FF;
+  border-radius: 5px
+}
+
+.btn{
+  font-family: 'Poppins';
+}
+/*---------------------------------------------------------------------------------------------------*/
+/*----------------------------------------------------blog-article-----------------------------------*/
+.blog-article_img {
+  width: 100%;
+  height: 324px;
+  object-fit: cover;
+  border-radius: 5px;
+  margin-bottom: 48px;
+}
+
+.blog-article_text {
+  color: var(--article-text-color);
+  font-weight: 400;
+  font-size: 16px;
+  margin-bottom: 70px
+}
+
+.blog-article_text h2,
+.blog-article_text h3,
+.blog-article_text h4,
+.blog-article_text h5 {
+  color: var(--main-white-color);
+  font-weight: 400;
+}
+
+.blog-article_text h2 {
+  font-size: 30px;
+  margin-bottom: 15px;
+}
+
+.blog-article_text h3 {
+  font-size: 22px;
+  margin-bottom: 10px;
+}
+
+.blog-article_text h4 {
+  margin-bottom: 10px;
+}
+
+.blog-article_text p {
+  margin-bottom: 40px;
+}
+
+
+
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------footer-----------------------------------------*/
 .footer {
@@ -876,7 +1060,8 @@ body {
   line-height: 135%;
   /* or 19px */
 
-  color: #6e5e83;
+  color: var(--article-text-color);
+  /*color: #6e5e83;*/
   padding-bottom: 57px;
 }
 .footer__navigation {
@@ -899,7 +1084,8 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  color: #f7f2ff;
+  color: var(--main-white-color);
+  /*color: #f7f2ff;*/
   align-items: center;
 }
 .footer__contact {
@@ -918,7 +1104,8 @@ body {
   font-size: 16px;
   line-height: 19px;
 
-  color: #f7f2ff;
+  color: var(--main-white-color);
+  /*color: #f7f2ff;*/
 }
 .footer-contact__tel {
   text-align: right;
@@ -929,7 +1116,8 @@ body {
   font-size: 14px;
   line-height: 17px;
 
-  color: #6e5e83;
+  color: var(--article-text-color);
+  /*color: #6e5e83;*/
 }
 .footer-contact__email {
   text-align: right;
@@ -938,5 +1126,6 @@ body {
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
-  color: #6e5e83;
+  color: var(--article-text-color);
+  /*color: #6e5e83;*/
 }
